# MBU_Koerselsgodtgoerelse_Skolekoersler_Update_Sharepoint

./: README.md  pyproject.toml
robot_framework/: config.py  process.py
